--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
     "files.associations": {
         "stdexcept": "cpp"
     },
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.pythonPath": "/home/haruyaishikawa/.virtualenvs/rs_opencv/bin/python",
+    
 }
