--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ include( CMakeToolsHelpers OPTIONAL )
 find_package( OpenCV REQUIRED )
 
 # REALSENSE
-find_library( RS_LIB realsense )
+find_library( RS_LIB realsense2 )
 
 set( DEPENDENCIES ${RS_LIB} ${OpenCV_LIBS} )
 
@@ -44,10 +44,10 @@ file( GLOB HEADERS "include/*.hpp" )
 
 #====================================================================================================================#
 
-include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include )
+#include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include )
 
 # don't really need this now
-link_directories( ${CMAKE_BINARY_DIR} )
+#link_directories( ${CMAKE_BINARY_DIR} )
 set( EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR} )
 
 # executables
