add data scripts, change python script, make data saving funtion for cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "files.associations": {
-        "stdexcept": "cpp"
+        "stdexcept": "cpp",
+        "array": "cpp"
     },
     "python.linting.enabled": true,
-    "python.pythonPath": "/home/haruyaishikawa/.virtualenvs/rs_opencv/bin/python",
-    
+    "python.pythonPath": "/home/haruyaishikawa/.virtualenvs/rs_opencv/bin/python"
 }
