new openpose directory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
         "array": "cpp"
     },
     "python.linting.enabled": true,
-    "python.pythonPath": "/home/haruyaishikawa/.virtualenvs/rs_opencv/bin/python"
+    "python.pythonPath": "/home/haruyaishikawa/anaconda3/envs/chainer/bin/python"
 }
